[package]
name = "nettool_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
aes = "0.8"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
tokio-util = "0.7"
futures = "0.3"
indicatif = "0.17"
block-modes = "0.9"
block-padding = "0.3"
aes-gcm = "0.10"
cbc = "0.1.2"
x25519-dalek = "2.0.1"
chrono = "0.4.41"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.0"
sha2 = "0.10"
